--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
         <section class="labs-list">
             <div class="lab-card">
                 <a href="lab1/index.html" class="lab-link">Лабораторная 1</a>
+            <div class="lab-card">
+                <a href="lab2/index.html" class="lab-link">Лабораторная 2</a>
             </div>
-
         </section>
     </main>
 </body>
