--- a/lab1/index.html
+++ b/lab1/index.html
@@ -16,7 +16,7 @@
         <h1>Между булок</h1>
         <nav>
             <a href="#">Главная</a>
-            <a href="#">Меню</a>
+            <a href="../lab2/index.html">Меню</a>
             <a href="#">О нас</a>
             <a href="#contacts">Контакты</a>
         </nav>
