--- a/lab2/index.html
+++ b/lab2/index.html
@@ -14,8 +14,8 @@
     <header>
         <h1>Между булок</h1>
         <nav>
-            <a href="../index.html">Главная</a>
-            <a href="#" class="active">Собрать ланч</a>
+            <a href="../lab1/index.html">Главная</a>
+            <a href="#" class="active">Меню</a>
             <a href="#">О нас</a>
             <a href="#contacts">Контакты</a>
         </nav>
